Set conventions up to Java 25 by OpenRewrite (#700)
* Java 25 unused var code conventions

* add more

* remove unused status

* Define all conventions